[package]
name = "yewtest"
version = "0.1.0"
edition = "2018"

[lib]
name = "yewcss"
path = "lib/src/lib.rs"

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.19"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.145"
wasm-bindgen-futures = "0.4.33"
url = "2.3.1"